fix(#6199, #6200): the flush drains wake on the page, and one suspended database's backlog is its own (#6223)
* fix(#6199, #6200): the flush drains wake on the page, and one suspended database's backlog is its own

their latency was the poll interval rather than when the pages actually landed: 10 ms for the bulk drain
every close, rename, index compaction and backup suspension goes through, and 1 ms for the snapshot t0
barrier's residual drain - which polls with the database's apply write lock AND the JVM-wide page-manager
lock held, so each of those sleeps was a millisecond in which no committer of any database could publish a
page. Since #6133 there is exactly one place a database's pending count goes down, so the drains now park on
a signal raised there. The bounded wait stays as the bound on a lost notification (and to keep the callers'
timeout machinery re-evaluated), which is why the residual one stays at the 1 ms it used to sleep: the worst
case is unchanged, the common case is immediate.

RESPONSE was global too, and that was not. Once one suspended database's backlog crossed the cap the flush
thread stopped polling the shared queue altogether, so the queue filled and the committers of EVERY open
database were throttled - and, because publishPages holds the page-manager lock across the enqueue, throttled
inside a JVM-wide lock. A leader shipping a multi-GB snapshot of database A stalled the committers of
unrelated databases B and C, whose pages could have gone straight to disk and RELIEVED the heap the cap
protects.

The cap is now served on the committer side, in awaitDeferredBacklogUnderCap, and only for the databases that
are actually suspended - they are the only ones whose batches are ever deferred. It is called BEFORE the
page-manager lock is taken (a separate step of publishPages, and directly in writePages for the asynchronous
compaction writes that do not go through it), so throttling A's writers no longer stalls B's. The flush thread
always drains.